# nexus-remote

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.relay  Dockerfile.signaling  PROJECT_STRUCTURE.md  README.md  all_features.py  all_remaining_features.py  audio_stream.py  auth_server.py  codec_config.py  compression.py  encryption.py  health_server.py  http_signaling.py  multi_monitor.py  nexus_client.db  nexus_client.py  nexus_client_final.py  nexus_complete.py  nexus_final_app.py  nexus_full_client.py  nexus_full_python_ui.py  nexus_secure_client.py  render.yaml  shared_clipboard.py  test_all_56_features.py  test_all_features.py  test_all_new_features.py  test_final.py  test_report.txt
agents/: nexus_agent.py
agents/android/: android_agent.py
agents/linux/: linux_agent.py
agents/macos/: macos_agent.py
agents/web/: viewer.html
agents/windows/: windows_agent.py
consoles/ps5/: ps5_client.py
consoles/xbox/: xbox_client.py
include/: base64.h  crypto_utils.h  gamepad_manager.h  input_filter.h  nexus_client.h  sha1.h  socket_utils.h  stun.h  tls_utils.h  turn.h  websocket_utils.h  wol.h
platform/: nexus_client_base.py
relay/: relay_server.py
resources/: README.md  dialog.rc
src/: base64.cpp  client.cpp  crypto_utils.cpp  crypto_utils_stub.cpp  gamepad_manager.cpp  gamepad_overlay.cpp  input_filter.cpp  main.cpp  nexus_client.cpp  nexus_final_ui.cpp  nexus_full_ui.cpp  nexus_modern_ui.cpp  nexus_simple.cpp  nexus_ui_login.cpp  relay_server.cpp  sha1.cpp  signaling_client.cpp  signaling_health.tmp  signaling_server.cpp  socket_utils.cpp  stun.cpp  stun_client.cpp  tls_client.cpp  tls_relay.cpp  tls_utils.cpp  turn.cpp  turn_client.cpp  websocket_utils.cpp  wol.cpp
webapp/: blog.html  dashboard.html  docs.html  download.html  files.html  forum.html  gamepad.html  index.html  login.html  p2p.html  register.html  remote.html  reset.html  speedtest.html  status.html  support.html  viewer.html  wake_stream.html
webui/: index.html
(+9 files in other folders)
